implement multi-raft-group on all components